<resources>
    <string name="app_name">Gideon Chukwu</string>
    <string name="name">Name:</string>
    <string name="gender">Gender:</string>
    <string name="date_created">Date Created:</string>
    <string name="colours">Colours:</string>
    <string name="countries">Countries:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">Email:</string>
    <string name="country">Country:</string>
    <string name="car_model">Car Model:</string>
    <string name="year">Year:</string>
    <string name="car_color">Car Color:</string>
    <string name="job_title">Job Title:</string>
    <string name="bio">Bio:</string>
    <string name="by_name">By Name</string>
    <string name="by_date">By Date</string>
    <string name="by_gender">By Gender</string>
    <string name="by_colour">By Colour</string>
    <string name="by_country">By Country</string>
    <string name="filter">Filter</string>
    <string name="no_internet_connection">Oops! No Internet Connection</string>
</resources>
